--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "http://www.diversifiedelectricinc.com",
+  "homepage": "http://www.diversifiedelectricinc.com",
   "dependencies": {
     "@babel/core": "7.1.0",
     "@svgr/webpack": "2.4.1",
@@ -30,6 +30,7 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.0",
+    "fsevents": "^2.0.7",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "23.6.0",
@@ -44,10 +45,13 @@
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
     "react": "^16.6.3",
+    "react-animation-components": "^3.0.0",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
+    "react-icons": "^3.7.0",
     "react-router-dom": "^4.3.1",
+    "react-transition-group": "^4.3.0",
     "reactstrap": "^6.5.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
@@ -75,7 +79,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "node-sass": "^4.10.0",
+    "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0"
   },
   "jest": {
