--- a/client/package.json
+++ b/client/package.json
@@ -68,8 +68,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "surge",
     "build": "node scripts/build.js",
+    "dist" : "surge --domain diversifiedelectricinc.surge.sh",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
